
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






struct pmd_entry {unsigned long addr; int * entries; } ;


 int EXIT_FAILURE ;
 int exit (int ) ;
 struct pmd_entry* malloc (int) ;
 int memset (int *,int ,int) ;
 int perror (char*) ;

__attribute__((used)) static struct pmd_entry *ptsc_alloc_pmd_entry(unsigned long addr) {
 struct pmd_entry *entry = malloc(sizeof(*entry));
 if (!entry) {
  perror("[-] malloc()");
  exit(EXIT_FAILURE);
 }
 entry->addr = addr;
 memset(&entry->entries[0], 0, sizeof(entry->entries));
 return entry;
}
