; ModuleID = '/home/carl/AnghaBench/exploitdb/exploits/linux/local/extr_45175.c_ptsc_alloc_pmd_entry.c'
source_filename = "/home/carl/AnghaBench/exploitdb/exploits/linux/local/extr_45175.c_ptsc_alloc_pmd_entry.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.pmd_entry = type { i64, i32* }

@.str = private unnamed_addr constant [13 x i8] c"[-] malloc()\00", align 1
@EXIT_FAILURE = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (%struct.pmd_entry* (i64)* @ptsc_alloc_pmd_entry to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal %struct.pmd_entry* @ptsc_alloc_pmd_entry(i64 %0) #0 {
  %2 = alloca i64, align 8
  %3 = alloca %struct.pmd_entry*, align 8
  store i64 %0, i64* %2, align 8
  %4 = call %struct.pmd_entry* @malloc(i32 16)
  store %struct.pmd_entry* %4, %struct.pmd_entry** %3, align 8
  %5 = load %struct.pmd_entry*, %struct.pmd_entry** %3, align 8
  %6 = icmp ne %struct.pmd_entry* %5, null
  br i1 %6, label %11, label %7

7:                                                ; preds = %1
  %8 = call i32 @perror(i8* getelementptr inbounds ([13 x i8], [13 x i8]* @.str, i64 0, i64 0))
  %9 = load i32, i32* @EXIT_FAILURE, align 4
  %10 = call i32 @exit(i32 %9) #3
  unreachable

11:                                               ; preds = %1
  %12 = load i64, i64* %2, align 8
  %13 = load %struct.pmd_entry*, %struct.pmd_entry** %3, align 8
  %14 = getelementptr inbounds %struct.pmd_entry, %struct.pmd_entry* %13, i32 0, i32 0
  store i64 %12, i64* %14, align 8
  %15 = load %struct.pmd_entry*, %struct.pmd_entry** %3, align 8
  %16 = getelementptr inbounds %struct.pmd_entry, %struct.pmd_entry* %15, i32 0, i32 1
  %17 = load i32*, i32** %16, align 8
  %18 = getelementptr inbounds i32, i32* %17, i64 0
  %19 = call i32 @memset(i32* %18, i32 0, i32 8)
  %20 = load %struct.pmd_entry*, %struct.pmd_entry** %3, align 8
  ret %struct.pmd_entry* %20
}

declare dso_local %struct.pmd_entry* @malloc(i32) #1

declare dso_local i32 @perror(i8*) #1

; Function Attrs: noreturn
declare dso_local i32 @exit(i32) #2

declare dso_local i32 @memset(i32*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
